# FindMyText

./: LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt
experiments/: benchmark.py
findmytext/: __init__.py  detectors.py  index_builder.py  indexing.py  oracle.py  utils.py  winnower.py
