[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "findmytext"
version = "0.1.0"
description = "Text-containment detection via winnowed fingerprinting"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "filelock",
    "numba",
    "numpy",
    "orjson",
    "polars",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
fast-gzip = ["isal"]

[tool.setuptools.packages.find]
where = ["."]
include = ["findmytext*"]
